--- a/package.json
+++ b/package.json
@@ -18,6 +18,9 @@
   "files": [
     "/lib"
   ],
+  "maintainers": [
+    "jerry_cheung<huahuazfh@qq.com>"
+  ],
   "author": "bowlofnoodles",
   "license": "ISC",
   "devDependencies": {
